fix: Add missing digit to item counter font size and add button borders to increase visibilty on hover

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -172,6 +172,7 @@ nav a:hover {
     background-color: #75e6ff;
     text-decoration: none;
     color: #0c2d6c;
+    border: solid 1px #0c2d6c;
 }
 
 .card-subtitle {
@@ -269,6 +270,7 @@ footer {
     background-color: #75e6ff;
     text-decoration: none;
     color: #0c2d6c;
+    border: 1px solid #0c2d6c;
 }
 
 .products-button a:hover {
